--- a/package.json
+++ b/package.json
@@ -19,39 +19,39 @@
   "devDependencies": {
     "babel-core": "6.11.4",
     "babel-loader": "6.2.4",
-    "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
-    "babel-preset-stage-2": "^6.0.0",
-    "babel-runtime": "^6.0.0",
+    "babel-plugin-transform-runtime": "6.9.0",
+    "babel-preset-es2015": "6.9.0",
+    "babel-preset-stage-2": "6.11.0",
+    "babel-runtime": "6.9.2",
     "chai": "3.5.0",
-    "chromedriver": "^2.21.2",
-    "connect-history-api-fallback": "^1.1.0",
-    "copy-webpack-plugin": "^1.1.1",
-    "cross-env": "1.0.7",
-    "cross-spawn": "^2.1.5",
-    "css-loader": "^0.23.0",
-    "debug-menu": "^0.3.0",
-    "electron-packager": "^7.0.0",
+    "chromedriver": "2.21.2",
+    "connect-history-api-fallback": "1.2.0",
+    "copy-webpack-plugin": "3.0.1",
+    "cross-env": "2.0.0",
+    "cross-spawn": "4.0.0",
+    "css-loader": "0.23.1",
+    "debug-menu": "0.4.0",
+    "electron-packager": "7.3.0",
     "electron-prebuilt": "1.3.0",
     "electron-rebuild": "1.1.5",
-    "eslint": "^2.0.0",
-    "eslint-config-standard": "^5.1.0",
-    "eslint-friendly-formatter": "^1.2.2",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-html": "^1.3.0",
-    "eslint-plugin-promise": "^1.0.8",
-    "eslint-plugin-standard": "^1.3.2",
-    "eventsource-polyfill": "^0.9.6",
+    "eslint": "3.1.1",
+    "eslint-config-standard": "5.3.5",
+    "eslint-friendly-formatter": "2.0.6",
+    "eslint-loader": "1.4.1",
+    "eslint-plugin-html": "1.5.1",
+    "eslint-plugin-promise": "2.0.0",
+    "eslint-plugin-standard": "2.0.0",
+    "eventsource-polyfill": "0.9.6",
     "express": "4.14.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.4",
-    "html-webpack-plugin": "^2.8.1",
-    "http-proxy-middleware": "^0.11.0",
-    "inject-loader": "^2.0.1",
-    "isparta-loader": "^2.0.0",
-    "jasmine-core": "^2.4.1",
-    "json-loader": "^0.5.4",
-    "karma": "1.1.1",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.9.0",
+    "html-webpack-plugin": "2.22.0",
+    "http-proxy-middleware": "0.17.0",
+    "inject-loader": "2.0.1",
+    "isparta-loader": "2.0.0",
+    "jasmine-core": "2.4.1",
+    "json-loader": "0.5.4",
+    "karma": "1.1.2",
     "karma-chai": "0.1.0",
     "karma-coverage": "1.1.1",
     "karma-electron": "4.0.0",
@@ -64,11 +64,11 @@
     "moment": "2.14.1",
     "ncp": "2.0.0",
     "nightwatch": "0.9.5",
-    "phantomjs-prebuilt": "^2.1.3",
-    "rimraf": "^2.5.0",
-    "selenium-server": "2.52.0",
+    "phantomjs-prebuilt": "2.1.8",
+    "rimraf": "2.5.4",
+    "selenium-server": "2.53.1",
     "should": "10.0.0",
-    "url-loader": "^0.5.7",
+    "url-loader": "0.5.7",
     "vue": "1.0.26",
     "vue-hot-reload-api": "1.3.3",
     "vue-html-loader": "1.2.3",
@@ -78,7 +78,7 @@
     "webpack": "1.13.1",
     "webpack-dev-middleware": "1.6.1",
     "webpack-externals-plugin": "1.0.0",
-    "webpack-hot-middleware": "2.12.1",
+    "webpack-hot-middleware": "2.12.2",
     "webpack-merge": "0.14.1"
   }
 }
